--- a/PropertyBuilder/PropertyBuilder.csproj
+++ b/PropertyBuilder/PropertyBuilder.csproj
@@ -66,12 +66,21 @@
     <Reference Include="Microsoft.Xna.Framework.GamerServices, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="mscorlib" />
     <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameContent\CreateNewObject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GameContent\CreateNewObject.Designer.cs">
+      <DependentUpon>CreateNewObject.cs</DependentUpon>
+    </Compile>
     <Compile Include="GameContent\Scenes\PropertyScene.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
@@ -114,6 +123,11 @@
       <ProductName>Windows Installer 4.5</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="GameContent\CreateNewObject.resx">
+      <DependentUpon>CreateNewObject.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
